--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
   "editor.formatOnPaste": true,
   "editor.formatOnSave": true,
   "eslint.format.enable": true,
-  "files.autoSave": "afterDelay"
+  "files.autoSave": "afterDelay",
+  "git.autoStash": true
 }
